# WeeFloat

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.txt  README.md  bfloat16.h  msfp.h  test.cpp
